--- a/app/src/main/res/layout/fragment_self.xml
+++ b/app/src/main/res/layout/fragment_self.xml
@@ -1,4 +1,4 @@
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,11 +7,14 @@
     tools:context="com.example.jinphy.simplechat.modules.main.self.SelfFragment">
 
     <LinearLayout
+        android:id="@+id/content_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="56dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:padding="@dimen/dimen_5dp">
+        android:padding="@dimen/dimen_5dp"
+        android:translationY="244dp">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -72,11 +75,62 @@
             app:cardUseCompatPadding="true">
 
         </android.support.v7.widget.CardView>
-
-
 
 
     </LinearLayout>
 
 
-</LinearLayout>
+    <android.support.v7.widget.CardView
+        android:id="@+id/head_view"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:cardCornerRadius="0dp"
+        app:cardElevation="@dimen/dimen_4dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/avatar"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_centerInParent="true"
+                android:elevation="@dimen/dimen_10dp"
+                android:src="@drawable/ic_person_48dp"
+                app:civ_border_color="@color/white"
+                app:civ_border_width="@dimen/dimen_3dp"
+                app:civ_fill_color="@color/colorPrimaryDark"/>
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dimen_32dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginBottom="@dimen/dimen_12dp"
+                android:layout_marginLeft="@dimen/dimen_12dp"
+                android:gravity="center"
+                android:text="Jinphy"
+                android:textColor="#9fffffff"
+                android:textSize="@dimen/size_18sp"/>
+
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dimen_32dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="@dimen/dimen_12dp"
+                android:layout_marginRight="@dimen/dimen_12dp"
+                android:gravity="center"
+                android:text="2017-8-12"
+                android:textColor="#9fffffff"
+                android:textSize="@dimen/size_15sp"/>
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+
+
+</FrameLayout>
