--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="dimen_32dp">32dp</dimen>
     <dimen name="size_18sp">18sp</dimen>
     <dimen name="dimen_2dp">2dp</dimen>
+    <dimen name="size_15sp">15sp</dimen>
 </resources>
