--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -30,65 +30,118 @@
             android:minHeight="?attr/actionBarSize"
             android:orientation="horizontal">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/voice_View"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+            <FrameLayout
+                android:id="@+id/btn_voice_and_keyboard"
+                android:layout_width="@dimen/dimen_40dp"
+                android:layout_height="@dimen/dimen_40dp"
                 android:layout_gravity="bottom"
                 android:layout_marginBottom="@dimen/dimen_5dp"
-                android:layout_marginLeft="@dimen/dimen_5dp"
-                android:src="@drawable/ic_voice_24dp"
-                app:civ_border_color="@color/colorAccent"
-                app:civ_border_width="1dp"/>
+                android:layout_marginLeft="@dimen/dimen_5dp">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/voice_View"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_voice_24dp"
+                    app:civ_border_color="@color/colorAccent"
+                    app:civ_border_width="1dp"/>
 
-            <EditText
+                <ImageView
+                    android:id="@+id/keyboard_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone"
+                    android:src="@drawable/ic_keyboard_24dp"/>
+
+            </FrameLayout>
+
+
+            <FrameLayout
+                android:id="@+id/input_text_and_voice"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:paddingLeft="@dimen/dimen_5dp"
-                android:paddingRight="@dimen/dimen_5dp"
-                android:hint="输入文本信息"
-                android:textSize="@dimen/size_15sp"
-                android:maxLines="10"/>
+                android:layout_gravity="bottom">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/more_view"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="bottom"
-                android:clickable="true"
-                android:src="@drawable/ic_add_24dp"
-                app:civ_border_width="1dp"
-                app:civ_border_color="@color/colorAccent"
+                <EditText
+                    android:id="@+id/input_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="输入文本信息"
+                    android:maxLines="10"
+                    android:paddingLeft="@dimen/dimen_5dp"
+                    android:paddingRight="@dimen/dimen_5dp"
+                    android:textSize="@dimen/size_15sp"/>
 
-                android:layout_marginBottom="@dimen/dimen_5dp"
-                android:layout_marginLeft="@dimen/dimen_5dp"
-                android:layout_marginRight="@dimen/dimen_5dp"/>
+                <android.support.v7.widget.CardView
+                    android:id="@+id/input_voice"
+                    app:cardBackgroundColor="@color/colorAccent"
+                    app:cardElevation="@dimen/dimen_2dp"
+                    app:cardCornerRadius="@dimen/dimen_3dp"
+                    android:visibility="gone"
+                    android:layout_marginBottom="@dimen/dimen_5dp"
+                    android:layout_marginLeft="@dimen/dimen_5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dimen_40dp">
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/btn_send"
-                android:layout_width="60dp"
-                android:layout_height="43dp"
-                android:visibility="gone"
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="@dimen/dimen_1dp"
+                        android:background="@drawable/btn_background"
+                        android:clickable="true"
+                        android:gravity="center"
+                        android:text="按住，讲话"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="@dimen/size_18sp"/>
+
+                </android.support.v7.widget.CardView>
+
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/btn_more_and_send"
                 android:layout_gravity="bottom"
                 android:layout_marginBottom="@dimen/dimen_5dp"
                 android:layout_marginLeft="@dimen/dimen_5dp"
                 android:layout_marginRight="@dimen/dimen_5dp"
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="@dimen/dimen_3dp"
-                app:cardElevation="@dimen/dimen_2dp">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/pic_chat_send_btn"
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/more_view"
+                    android:layout_width="@dimen/dimen_40dp"
+                    android:layout_height="40dp"
                     android:clickable="true"
-                    android:gravity="center"
-                    android:text="发送"
-                    android:textColor="@color/white"/>
+                    android:layout_marginRight="@dimen/dimen_5dp"
+                    android:src="@drawable/ic_add_24dp"
+                    app:civ_border_width="1dp"
+                    app:civ_border_color="@color/colorAccent"/>
 
-            </android.support.v7.widget.CardView>
+                <android.support.v7.widget.CardView
+                    android:id="@+id/send_view_parent"
+                    android:layout_width="60dp"
+                    android:layout_height="43dp"
+                    android:visibility="gone"
+                    android:clickable="true"
+                    app:cardBackgroundColor="@color/white"
+                    app:cardCornerRadius="@dimen/dimen_3dp"
+                    app:cardElevation="@dimen/dimen_2dp">
+
+                    <TextView
+                        android:id="@+id/send_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/pic_chat_send_btn"
+                        android:clickable="true"
+                        android:gravity="center"
+                        android:text="发送"
+                        android:textColor="@color/white"/>
+
+                </android.support.v7.widget.CardView>
+
+            </FrameLayout>
+
+
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
