--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -30,19 +30,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!--floatingActionButton-->
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/fab_emotion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginRight="@dimen/dimen_10dp"
-                android:src="@drawable/ic_smile_24dp"
-                android:tint="@color/colorAccent"
-                app:backgroundTint="@color/white"
-                app:rippleColor="@color/colorAccent"
-                app:fabSize="mini"/>
-
 
             <!--输入框和按钮栏的布局-->
             <LinearLayout
@@ -51,29 +38,55 @@
                 android:minHeight="?attr/actionBarSize"
                 android:orientation="horizontal">
 
-                <FrameLayout
-                    android:id="@+id/btn_voice_and_keyboard"
-                    android:layout_width="@dimen/dimen_40dp"
-                    android:layout_height="@dimen/dimen_40dp"
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
-                    android:layout_marginBottom="@dimen/dimen_5dp"
-                    android:layout_marginLeft="@dimen/dimen_5dp">
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/voice_View"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/ic_voice_24dp"
-                        app:civ_border_color="@color/colorAccent"
-                        app:civ_border_width="1dp"/>
+                    android:orientation="vertical">
 
-                    <ImageView
-                        android:id="@+id/keyboard_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:visibility="gone"
-                        android:src="@drawable/ic_keyboard_24dp"/>
+                    <!--floatingActionButton-->
+                    <android.support.design.widget.FloatingActionButton
+                        android:id="@+id/fab_emotion"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/dimen_8dp"
+                        android:layout_marginTop="@dimen/dimen_5dp"
+                        android:layout_marginLeft="@dimen/dimen_5dp"
+                        android:layout_marginRight="@dimen/dimen_5dp"
+                        android:src="@drawable/ic_smile_24dp"
+                        android:tint="@color/colorAccent"
+                        app:backgroundTint="@color/white"
+                        app:rippleColor="@color/colorAccent"
+                        app:fabSize="mini"/>
 
-                </FrameLayout>
+
+                    <FrameLayout
+                        android:id="@+id/btn_voice_and_keyboard"
+                        android:layout_width="@dimen/dimen_40dp"
+                        android:layout_height="@dimen/dimen_40dp"
+                        android:layout_gravity="bottom">
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/voice_View"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginBottom="@dimen/dimen_5dp"
+                            android:layout_marginLeft="@dimen/dimen_5dp"
+                            android:src="@drawable/ic_voice_24dp"
+                            app:civ_border_color="@color/colorAccent"
+                            app:civ_border_width="1dp"/>
+
+                        <ImageView
+                            android:id="@+id/keyboard_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="@dimen/dimen_5dp"
+                            android:visibility="gone"
+                            android:src="@drawable/ic_keyboard_24dp"/>
+
+                    </FrameLayout>
+
+                </LinearLayout>
 
 
                 <FrameLayout
