--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="chat_send_msg_pressed">#ff4E342E</color>
     <color name="chat_receive_msg_pressed">#9f999999</color>
     <color name="chat_send_btn_normal">#7f4E342E</color>
+    <color name="half_alpha_black">#7f000000</color>
 </resources>
