--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,12 @@
     <dimen name="dimen_13dp">13dp</dimen>
     <dimen name="dimen_40dp">40dp</dimen>
     <dimen name="dimen_1dp">1dp</dimen>
+    <dimen name="dimen_80dp">80dp</dimen>
+    <dimen name="dimen_0dp">0dp</dimen>
+    <dimen name="dimen_300dp">300dp</dimen>
+    <dimen name="status_bar_height">20dp</dimen>
+    <dimen name="tool_bar_height">56dp</dimen>
+    <dimen name="status_tool_bar_height">80dp</dimen>
+    <dimen name="dimen_6dp">6dp</dimen>
+    <dimen name="dimen_14dp">14dp</dimen>
 </resources>
