--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.jinphy.simplechat.modules.login.LoginActivity"
+    android:background="#ffffffff"
     android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -16,12 +17,9 @@
 
         <FrameLayout
             android:id="@+id/fragment"
-            android:layout_marginTop="@dimen/tool_bar_height"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
     </android.support.design.widget.CoordinatorLayout>
-
-    <include layout="@layout/layout_appbar"/>
 
 </FrameLayout>
