--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -9,66 +9,42 @@
 
 
         <android.support.v7.widget.CardView
-            android:layout_width="350dp"
-            android:layout_height="500dp"
+            android:layout_width="330dp"
+            android:layout_height="550dp"
             app:cardCornerRadius="10dp"
             app:cardBackgroundColor="@color/white"
-            app:cardElevation="10dp"
-            app:contentPadding="10dp"
+            app:cardElevation="@dimen/dimen_5dp"
             app:cardUseCompatPadding="true"
             android:layout_centerInParent="true">
-
-            <com.example.jinphy.simplechat.custom_view.CustomVerticalStepperFormLayout
-                android:id="@+id/vertical_steps_form"
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-            </com.example.jinphy.simplechat.custom_view.CustomVerticalStepperFormLayout>
+                <RelativeLayout
+                    android:background="@color/color_red_D50000"
+                    android:layout_width="match_parent"
+                    android:elevation="@dimen/dimen_1dp"
+                    android:layout_height="@dimen/tool_bar_height">
 
+                    <TextView
+                        android:text="新建账号"
+                        android:layout_centerInParent="true"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/size_18sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
+                </RelativeLayout>
 
-            <!--
+                <com.example.jinphy.simplechat.custom_view.CustomVerticalStepperFormLayout
+                    android:id="@+id/vertical_steps_form"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                    <ScrollView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical"
-                            android:layout_gravity="center_vertical">
+                </com.example.jinphy.simplechat.custom_view.CustomVerticalStepperFormLayout>
 
-                            <android.support.design.widget.TextInputLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="@dimen/dimen_30dp">
-                                <android.support.design.widget.TextInputEditText
-                                    android:id="@+id/account_text"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:hint="@string/account"/>
-
-                            </android.support.design.widget.TextInputLayout>
-
-
-                            <android.support.design.widget.TextInputLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="50dp">
-
-                                <android.support.design.widget.TextInputEditText
-                                    android:id="@+id/password_text"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:hint="@string/password"/>
-                            </android.support.design.widget.TextInputLayout>
-
-                        </LinearLayout>
-
-                    </ScrollView>
-            -->
-
-
+            </LinearLayout>
 
 
         </android.support.v7.widget.CardView>
