--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="background">#fff7f7f7</color>
     <color name="color_ffcccccc">#ffcccccc</color>
     <color name="colorAccentLighter">#9f4E342E</color>
+    <color name="color_red_D50000">#D50000</color>
+    <color name="color_red_light_B71C1C">#B71C1C</color>
 </resources>
