--- a/app/src/main/res/drawable/ic_white_rectangle_background.xml
+++ b/app/src/main/res/drawable/ic_white_rectangle_background.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item >
-        <shape android:shape="oval">
+    <item android:state_pressed="false">
+        <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
+            <corners android:radius="@dimen/dimen_5dp"/>
         </shape>
-
     </item>
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <solid android:color="#7fbbbbbb"/>
+            <corners android:radius="@dimen/dimen_5dp"/>
+        </shape>
+    </item>
+
 </selector>
