--- a/app/src/main/res/layout/fragment_modify_group.xml
+++ b/app/src/main/res/layout/fragment_modify_group.xml
@@ -9,6 +9,8 @@
     tools:context="com.example.jinphy.simplechat.modules.modify_user_info.ModifyUserFragment">
 
     <ScrollView
+        android:overScrollMode="never"
+        android:scrollbars="none"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
