--- a/app/src/main/res/layout/fragment_self.xml
+++ b/app/src/main/res/layout/fragment_self.xml
@@ -16,35 +16,62 @@
         android:layout_height="match_parent">
         <LinearLayout
             android:orientation="vertical"
+            android:minHeight="490dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <!--empty view-->
-            <View
+            <LinearLayout
+                android:id="@+id/menu_view"
                 android:layout_width="match_parent"
-                android:layout_height="440dp"/>
-
-            <android.support.v7.widget.CardView
-                android:layout_gravity="center_horizontal"
-                app:cardCornerRadius="@dimen/dimen_5dp"
-                app:cardElevation="@dimen/dimen_1dp"
-                app:cardBackgroundColor="@color/white"
-                android:layout_marginBottom="@dimen/dimen_20dp"
-                android:layout_width="200dp"
-                android:layout_height="@dimen/dimen_50dp">
+                android:layout_height="@dimen/dimen_0dp"
+                android:orientation="vertical"
+                android:layout_weight="1">
 
                 <TextView
-                    android:id="@+id/btn_logout"
-                    android:textSize="@dimen/dimen_15dp"
-                    android:textColor="@color/color_red_D50000"
-                    android:gravity="center"
-                    android:text="退出当前账号"
+                    android:textSize="@dimen/dimen_16dp"
+                    android:text="修改用户信息"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/dimen_10dp"
                     android:clickable="true"
-                    android:background="@drawable/btn_alpha"
+                    android:elevation="@dimen/dimen_1dp"
+                    android:background="@drawable/ic_white_rectangle_background"
+                    android:layout_margin="@dimen/dimen_10dp"
+                    android:layout_gravity="center_horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="@dimen/dimen_60dp"/>
 
-            </android.support.v7.widget.CardView>
+                <TextView
+                    android:textSize="@dimen/dimen_16dp"
+                    android:text="关于简聊"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/dimen_10dp"
+                    android:clickable="true"
+                    android:elevation="@dimen/dimen_1dp"
+                    android:background="@drawable/ic_white_rectangle_background"
+                    android:layout_marginLeft="@dimen/dimen_10dp"
+                    android:layout_marginRight="@dimen/dimen_10dp"
+                    android:layout_marginBottom="@dimen/dimen_10dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dimen_60dp"/>
+
+
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/btn_logout"
+                android:textSize="@dimen/dimen_15dp"
+                android:textColor="@color/color_red_D50000"
+                android:gravity="center"
+                android:text="退出当前账号"
+                android:clickable="true"
+                android:elevation="@dimen/dimen_1dp"
+                android:background="@drawable/ic_white_rectangle_background"
+                android:layout_marginBottom="@dimen/dimen_20dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="200dp"
+                android:layout_height="@dimen/dimen_50dp"/>
 
         </LinearLayout>
     </ScrollView>
@@ -62,6 +89,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <ImageView
+                android:id="@+id/blur_background"
+                tools:src="@drawable/pic_1"
+                android:scaleType="centerCrop"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/avatar"
                 android:layout_width="150dp"
@@ -71,7 +105,6 @@
                 android:src="@drawable/ic_person_48dp"
                 app:civ_border_color="@color/white"
                 app:civ_border_width="@dimen/dimen_3dp"
-                app:civ_fill_color="@color/colorPrimaryDark"
                 tools:ignore="VectorDrawableCompat"/>
 
             <TextView
